# nonebot-plugin-auto-bot-selector

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/nonebot_plugin_auto_bot_selector/: __init__.py  compat.py  main.py  registries.py  target.py
src/nonebot_plugin_auto_bot_selector/adapters/: __init__.py  dodo.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  red.py  satori.py
src/nonebot_plugin_auto_bot_selector/utils/: alconna.py
